--- a/perfilUsuario.html
+++ b/perfilUsuario.html
@@ -147,6 +147,16 @@
     </div>
   </section>
 
+  <section id="pago">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 borde">
+            
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="contact">
     <div class="">
       <div class="row">
