--- a/perfilUsuario.html
+++ b/perfilUsuario.html
@@ -30,14 +30,16 @@
 
   <section id="usuario">
     <div class="container ">
-      <div class="row perfil">
-        <div class="col m10 offset-m1 img">
-          <img src="assets/img/fotos-stock/image1.JPG" alt="" class="img-perfil">
-        </div>
-        <div class="row">
-          <div class="col m8 offset-m2">
-            <h4>Angelica Velazquez</h4>
-            <h6>angeliquezeuqzalev@gmail.com</h6>
+      <div class="row">
+        <div class="col m12 perfil">
+          <div class="row user">
+            <div class="col m2 offset-m1 img">
+              <img src="assets/img/fotos-stock/image1.JPG" alt="" class="img-perfil">
+            </div>
+              <div class="col m8 ">
+                <h4>Angelica Velazquez</h4>
+                <h6>angeliquezeuqzalev@gmail.com</h6>
+            </div>
           </div>
         </div>
       </div>
@@ -47,7 +49,7 @@
   <section id="datos">
     <div class="container">
       <div class="row">
-        <div class="col m5 borde">
+        <div class="col m6 borde borde--azul">
           <!--formulario-datos1-->
           <div class="row formulario-datos">
             <form class="col s12">
@@ -91,9 +93,9 @@
               </div>
             </form>
           </div>
+          <!--fin formulario-datos1-->
         </div>
-        <!--fin formulario-datos1-->
-        <div class="col m6 offset-m1 borde">
+        <div class="col s5 offset-s1 borde borde--azul">
           <!--formulario-datos2-->
           <div class="row formulario-datos">
             <form class="col s12">
@@ -146,15 +148,57 @@
       </div>
     </div>
   </section>
-
   <section id="pago">
     <div class="container">
       <div class="row">
-        <div class="col s12 borde">
-            
-        </div>
-      </div>
-    </div>
+        <div class="col s12 borde borde--amarillo">
+          <h5 class="formulario-datos">Pago</h5>
+          <div class="row">
+            <div class="col s10 offset-s1">
+              <form action="#">
+                <p>
+                  <input name="group1" type="radio" id="test1" class="with-gap" checked="checked" />
+                  <label for="test1">Otra Forma de pago</label>
+                </p>
+                <p>
+                  <input name="group1" type="radio" id="test2" class="with-gap"/>
+                  <label for="test2"><a href="#" class=" btn-medium"><img src="assets/img/tarjeta_credito.png" alt="" class="img-tarjetas"></a></label>
+                </p>
+                <div id="info-tarjeta">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="titular" type="text" class="validate">
+                    <label for="titular"> Titular *</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="tarjeta" type="password" class="validate">
+                    <label for="tarjeta">No. Tarjeta *</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s6">
+                    <input id="expiracionM" type="text" class="validate">
+                    <label for="expiracionM">Expiracion MM *</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <input id="expiracionA" type="text" class="validate">
+                    <label for="expiracionA"> Expiracion AA *</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="CVV" type="text" class="validate">
+                    <label for="CVV"> CVV *</label>
+                  </div>
+                </div>
+              </form>
+            </div>
+            </div>
+          </div>
+          </div>
+
   </section>
 
   <section id="contact">
@@ -163,11 +207,11 @@
         <div class="col s7">
           <ul class="social">
             <li class="social__icon"><a href="#" class="btn-large btn-floating light-blue darken-4"> <i class="social__icon--size fa fa-facebook white-text"></i></a>
-            <li class="social__icon"><a href="#" class="btn-large btn-floating blue lighten-1"> <i class="social__icon--size fa fa-twitter white-text"></i></a>
-            <li class="social__icon"><a href="#" class="btn-large btn-floating light-blue accent-3"> <i class="social__icon--size fa fa-linkedin white-text"></i></a>
-            <li class="social__icon"><a href="#" class="btn-large btn-floating social__icon--color"> <i class="social__icon--size fa fa-instagram white-text"></i></a>
-            <li class="social__icon"><a href="#" class="btn-large btn-floating red"> <i class="social__icon--size fa fa-youtube white-text"></i></a>
-            <li class="social__icon"><a href="#" class="btn-large btn-floating  orange lighten-1"> <i class="social__icon--size fa fa-rss white-text"></i></a>
+              <li class="social__icon"><a href="#" class="btn-large btn-floating blue lighten-1"> <i class="social__icon--size fa fa-twitter white-text"></i></a>
+                <li class="social__icon"><a href="#" class="btn-large btn-floating light-blue accent-3"> <i class="social__icon--size fa fa-linkedin white-text"></i></a>
+                  <li class="social__icon"><a href="#" class="btn-large btn-floating social__icon--color"> <i class="social__icon--size fa fa-instagram white-text"></i></a>
+                    <li class="social__icon"><a href="#" class="btn-large btn-floating red"> <i class="social__icon--size fa fa-youtube white-text"></i></a>
+                      <li class="social__icon"><a href="#" class="btn-large btn-floating  orange lighten-1"> <i class="social__icon--size fa fa-rss white-text"></i></a>
           </ul>
         </div>
         <div class="col s5 white-text newsletter">
@@ -180,7 +224,7 @@
               <a class="btn btn-save  light-green accent-4">Suscribir</a>
             </div>
           </div>
-          <p> 5292 5707 / 01 55 5292-5707   -  atencion@experimenta.com.mx</p>
+          <p> 5292 5707 / 01 55 5292-5707 - atencion@experimenta.com.mx</p>
         </div>
       </div>
     </div>
