--- a/cuentas.html
+++ b/cuentas.html
@@ -74,7 +74,7 @@
                             <h6>No.ref</h6>
                           </div>
                         </div>
-                        <hr>
+                        <hr class="linea-naranja">
                       </div>
                     </div><!--fin experiencia-->
 
@@ -83,7 +83,7 @@
                         <h5 class="titulo-experiencia">spa</h5>
                         <div class="row valign-wrapper">
                           <div class="col s4">
-                            <hr class="linea-naranja">
+                            <hr class="linea-gris">
                             <img src="assets/img/fotos-stock/Spa/spa1.jpg" alt="" class="img-experiencia">
                           </div>
                           <div class="col s2">
@@ -99,7 +99,7 @@
                             <h6>No.ref</h6>
                           </div>
                         </div>
-                        <hr>
+                        <hr class="linea-naranja">
                       </div>
                     </div><!--fin experiencia-->
 
@@ -108,7 +108,7 @@
                         <h5 class="titulo-experiencia">spa</h5>
                         <div class="row valign-wrapper">
                           <div class="col s4">
-                            <hr class="linea-naranja">
+                            <hr class="linea-gris">
                             <img src="assets/img/fotos-stock/Spa/spa1.jpg" alt="" class="img-experiencia">
                           </div>
                           <div class="col s2">
@@ -124,7 +124,6 @@
                             <h6>No.ref</h6>
                           </div>
                         </div>
-                        <hr>
                       </div>
                     </div><!--fin experiencia-->
 
